@@ -1211,10 +1211,10 @@ QPDF::decryptString(std::string& str, int objid, int generation)
 	    size_t vlen = str.length();
 	    // Using PointerHolder guarantees that tmp will
 	    // be freed even if rc4.process throws an exception.
-	    PointerHolder<char> tmp(true, QUtil::copy_string(str));
+	    auto tmp = QUtil::make_shared_cstr(str);
 	    RC4 rc4(QUtil::unsigned_char_pointer(key), toI(key.length()));
-	    rc4.process(QUtil::unsigned_char_pointer(tmp.getPointer()), vlen);
-	    str = std::string(tmp.getPointer(), vlen);
+	    rc4.process(QUtil::unsigned_char_pointer(tmp.get()), vlen);
+	    str = std::string(tmp.get(), vlen);
 	}
     }
     catch (QPDFExc&)
